fix: dropdown overlap with top:calc(100% - 16px)

--- a/app/public/assets/front/css/header/header.css
+++ b/app/public/assets/front/css/header/header.css
@@ -95,7 +95,7 @@
 
 .header-area .main-navbar .menu-dropdown {
     position: absolute;
-    top: 100%;
+    top: calc(100% - 16px);
     left: 0;
     z-index: 99;
     opacity: 0;
